image overlapped with text. Fixed.

--- a/final-project/client/src/index.css
+++ b/final-project/client/src/index.css
@@ -43,6 +43,7 @@
   }
   
   .AboutImage {
+    max-width: 50%;
     text-align: left;
     padding: 0.em 0.2em;
   }
@@ -50,7 +51,7 @@
   .AboutContent {
     justify-content: flex;
     text-align: left;
-    margin-left: -10%;
+    margin-left: 10%;
   }
 
   .RightSide {
